<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TimeTable</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">SY</string>
    <string name="title_section2">TY</string>
    <string name="title_section3">Final Year</string>
    <string name="time">Time</string>
    <string name="lecture">Lecture</string>
    <string name="professor">Professor</string>
    <string name="_12_to_2">12 to 2</string>
    <string name="_2_to_3">2 to 3</string>
    <string name="_3_to_4">3 to 4</string>
    <string name="_4_15_to_5_15">4.15 to 5.15</string>
    <string name="_5_15_to_6_15">5.15. to 6.15</string>
    <string name="_2_to_4">2 to 4</string>
    <string name="_12_to_1">12 to 1</string>
    <string name="_1_to_2">1 to 2</string>
    <string name="_4_15_to_6_15">4.15 to 6.15</string>
    <string name="about">About</string>
    <string name="about_ok">OK</string>

</resources>